--- a/ui/src/assets/bigtrace.html
+++ b/ui/src/assets/bigtrace.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
 <head>
   <meta charset="utf-8">
-  <title>Bigtrace UI</title>
+  <title>viewtrace.dev</title>
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-  <link rel="shortcut icon" id="favicon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
+  <link rel="shortcut icon" id="favicon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔎</text></svg>">
 </head>
 <body data-perfetto_version='{"filled_by_build_js":"."}'>
   <!--
@@ -25,7 +25,7 @@
   <div id="app_load"><div id="app_load_spinner"></div></div>
   <div id="app_load_failure">
 <pre>
-<span>Bigtrace UI - An unrecoverable problem occurred</span>
+<span>viewtrace.dev - An unrecoverable problem occurred</span>
 
 If you are seeing this message, something went wrong while loading the UI.
 Please file a bug (details below) and try these remediation steps:
@@ -38,8 +38,7 @@ Please file a bug (details below) and try these remediation steps:
 * Clear the site data and caches from devtools, following <a target="_blank" href="https://developers.google.com/web/tools/chrome-devtools/storage/cache#deletecache">these instructions</a>.
 
 In any case, **FILE A BUG** attaching logs and screenshots from devtools.
-  Googlers:      <a href="http://go/perfetto-ui-bug" target="_blank">go/perfetto-ui-bug</a>
-  Non-googlers:  <a href="https://github.com/google/perfetto/issues/new" target="_blank">github.com/google/perfetto/issues/new</a>
+  <a href="https://github.com/tannewt/viewtrace.dev/issues/new" target="_blank">github.com/tannewt/viewtrace.dev/issues/new</a>
 
 <div id=app_load_failure_err></div>
 Technical Information:
