--- a/ui/src/open_perfetto_trace/index.html
+++ b/ui/src/open_perfetto_trace/index.html
@@ -20,7 +20,7 @@
   <input type='button' value='Fetch and open selected trace' id='fetch'>
   <label><input type='checkbox' id='show_progress' checked="checked">Show progress dialog</label>
   <label><input type='checkbox' id='new_tab'>Open in new tab</label>
-  <label><input type='checkbox' id='hide_sidebar'>Hide sidebar in Perfetto UI</label>
+  <label><input type='checkbox' id='hide_sidebar'>Hide sidebar in viewtrace.dev</label>
 
 </main>
 
